--- a/.i3/config
+++ b/.i3/config
@@ -27,8 +27,8 @@ font xft:URWGothic-Book 11
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec konsole -e fish
-bindsym $mod+Return exec konsole -e zsh
+# bindsym $mod+Return exec termite -e fish
+bindsym $mod+Return exec termite -e zsh
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -62,7 +62,7 @@ bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
 bindsym $mod+F2 exec firefox
 bindsym $mod+Shift+f exec firefox
 # bindsym $mod+F3 exec pcmanfm
-bindsym $mod+F3 exec konsole -e 'ranger'
+bindsym $mod+F3 exec termite -e 'ranger'
 bindsym $mod+Shift+F3 exec gksu pcmanfm
 bindsym $mod+F4 exec firefox --private-window
 bindsym $mod+F5 exec terminal -e 'mocp'
@@ -76,7 +76,7 @@ bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
-bindsym $mod+Shift+v exec konsole -e fish -c vim
+bindsym $mod+Shift+v exec termite -e fish -c vim
 
 # focus_follows_mouse no
 
