--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -1,6 +1,7 @@
 [general]
 accounts = Gmail
 maxsyncaccounts = 3
+pythonfile = ~/.offlineimap.py
 
 [Account Gmail]
 localrepository = Local
@@ -14,7 +15,7 @@ localfolders = ~/Documentos/Email/gmail
 type = IMAP
 remotehost = imap.gmail.com
 remoteuser = caioaguida@gmail.com
-remotepass = 
+remotepasseval = get_pass()
 ssl = yes
 maxconnections = 1
 sslcacertfile = /etc/ssl/certs/ca-certificates.crt
