Some minor changes

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -23,25 +23,44 @@ clickable_url = true
 # foreground = #ebdbb2
 # foreground_bold = #ebdbb2
 #
-background = rgba(59, 56, 48, 0.85)
-foreground='#dddbc9'
-cursor='#dddbc9'
+# background = rgba(59, 56, 48, 0.85)
+# foreground='#dddbc9'
+# cursor='#dddbc9'
 
+background = rgba(14, 13, 9, 0.85)
+foreground = "#c7cac1"
+cursor     = "#c7cac1"
 # Colors
-color0=#3b3830
-color1=#d2894e
-color2=#d6835f
-color3=#d9a96a
-color4=#b6da6d
-color5=#de9b7f
-color6=#cee28e
-color7=#dddbc9
-color8=#9a998c
-color9=#d2894e
-color10=#d6835f
-color11=#d9a96a
-color12=#b6da6d
-color13=#de9b7f
-color14=#cee28e
-color15=#dddbc9
+# color0=#3b3830
+# color1=#d2894e
+# color2=#d6835f
+# color3=#d9a96a
+# color4=#b6da6d
+# color5=#de9b7f
+# color6=#cee28e
+# color7=#dddbc9
+# color8=#9a998c
+# color9=#d2894e
+# color10=#d6835f
+# color11=#d9a96a
+# color12=#b6da6d
+# color13=#de9b7f
+# color14=#cee28e
+# color15=#dddbc9
 
+color0  = #0d0c09
+color1  = #8a842e
+color2  = #905530
+color3  = #ac6c39
+color4  = #c3914c
+color5  = #cd9c69
+color6  = #3fbe88
+color7  = #c7cac1
+color8  = #8b8d87
+color9  = #8a842e
+color10 = #905530
+color11 = #ac6c39
+color12 = #c3914c
+color13 = #cd9c69
+color14 = #3fbe88
+color15 = #c7cac1
